--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,26 @@
-version: 2.1
+version: '2.1'
 orbs:
-  nx: nrwl/nx@1.0.0
+  nx: nrwl/nx@1.1.0
 jobs:
-  main:
+  build:
     docker:
-      - image: circleci/node:12-browsers
+      - image: 'cimg/node:14.17-browsers'
     steps:
       - checkout
-      - run: npm install
+      - run:
+          command: yarn install --frozen-lockfile
+          name: Install dependencies
       - nx/set-shas
-      - run: npx nx affected --base=$NX_BASE --target=build --parallel --max-parallel=3
-      - run: npx nx affected --base=$NX_BASE --target=test --parallel --max-parallel=2
-  pr:
-    docker:
-      - image: circleci/node:12-browsers
-    steps:
-      - checkout
-      - run: npm install
-      - nx/set-shas
-      - run: npx nx affected --base=$NX_BASE --target=build --parallel --max-parallel=3
-      - run: npx nx affected --base=$NX_BASE --target=test --parallel --max-parallel=2
+      - run:
+          command: >-
+            yarn nx affected --target=build --base=$NX_BASE --parallel
+            --max-parallel=3
+          name: Run Builds
+      - run:
+          command: >-
+            yarn nx affected --target=test --base=$NX_BASE --parallel
+            --max-parallel=2
+          name: Run Unit Tests
 workflows:
   build:
     jobs:
