--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           command: >-
             yarn nx affected --target=test --base=$NX_BASE --parallel
             --max-parallel=2
-          name: Run Unit Tests
+          name: Run Unit Tests in parallel
 workflows:
   build:
     jobs:
