Update pipeline to use yarn

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,24 +2,23 @@ version: '2.1'
 orbs:
   nx: nrwl/nx@1.1.0
 jobs:
-  main:
+  build:
     docker:
       - image: 'cimg/node:14.17-browsers'
     steps:
       - checkout
-      - run: npm install
-      - nx/set-shas
-      - run: npx nx affected --base=$NX_BASE --target=build --parallel --max-parallel=3
-      - run: npx nx affected --base=$NX_BASE --target=test --parallel --max-parallel=2
-  pr:
-    docker:
-      - image: 'cimg/node:14.17-browsers'
-    steps:
-      - checkout
-      - run: npm install
-      - nx/set-shas
-      - run: npx nx affected --base=$NX_BASE --target=build --parallel --max-parallel=3
-      - run: npx nx affected --base=$NX_BASE --target=test --parallel --max-parallel=2
+      - run:
+          command: yarn install --frozen-lockfile
+          name: Install dependencies
+      - nx/set-shas:
+          error-on-no-successful-workflow: true
+          main-branch-name: master
+      - run:
+          command: yarn nx affected --target=build --base=$NX_BASE
+          name: Run Builds
+      - run:
+          command: yarn nx affected --target=test --base=$NX_BASE
+          name: Run Unit Tests
 workflows:
   build:
     jobs:
@@ -27,7 +26,4 @@ workflows:
           filters:
             branches:
               only: main
-      - pr:
-          filters:
-            branches:
-              ignore: main
+
