--- a/nx.json
+++ b/nx.json
@@ -15,5 +15,21 @@
       }
     }
   },
-  "defaultProject": "configurator-bff"
+  "defaultProject": "configurator-bff",
+  "generators": {
+    "@nrwl/react": {
+      "application": {
+        "style": "scss",
+        "linter": "eslint",
+        "babel": true
+      },
+      "component": {
+        "style": "scss"
+      },
+      "library": {
+        "style": "scss",
+        "linter": "eslint"
+      }
+    }
+  }
 }
